--- a/front-end-master/about.html
+++ b/front-end-master/about.html
@@ -34,10 +34,9 @@ IT undergrad at MSIT.
 
 </pre>
   <img class="me" src="4.jpeg">
-  <a href="https://www.linkedin.com/in/vanshaj-pahwa-903324171/" target="_blank"><i class='fab fa-linkedin' style='font-size:36px'></i></a>
-  <a href="https://www.instagram.com/vanshaj.pahwa/" target="_blank"><i class="fa fa-instagram" style="font-size:36px"></i></a>
-  <a href="https://www.facebook.com/vanshaj.pahwa.92" target="_blank"><i class='fab fa-facebook-square' style='font-size:36px'></i></a>
-
+  <a href="https://www.linkedin.com/in/vanshaj-pahwa-903324171/" target="_blank"><img class="me1" src="5.png"></a>
+  <a href="https://www.instagram.com/vanshaj.pahwa/" target="_blank"><img class="me2" src="6.jpg"></a>
+  <a href="https://www.facebook.com/vanshaj.pahwa.92" target="_blank"><img class="me3" src="8.png"></a>
 </header>
   </body>
 </html>
