--- a/front-end-master/about.html
+++ b/front-end-master/about.html
@@ -11,7 +11,7 @@
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a class="active" href="about.html">About</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </div>
   <div class="title2">
